recycler, registration layout, sign in layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Football fan locator</string>
+    <string name="title_activity_choosecountry">activity_choosecountry</string>
 </resources>
