--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,42 @@
 <resources>
     <string name="app_name">Football fan locator</string>
-    <string name="title_activity_choosecountry">activity_choosecountry</string>
+    <string name="title_activity_choosecountry">Choose the country you support</string>
     <string name="loading">Loading&#8230;</string>
     <string name="nickname">Nickname</string>
     <string name="contact">Your contact</string>
     <string name="sign_in">Sign in</string>
     <string name="error_field_required">Required</string>
     <string name="call_telegram">Go to telegram</string>
+    <string name="russia">Russia</string>
+    <string name="germany">Germany</string>
+    <string name="brazil">Brazil</string>
+    <string name="portugal">Portugal</string>
+    <string name="argentina">Argentina</string>
+    <string name="belgium">Belgium</string>
+    <string name="poland">Poland</string>
+    <string name="france">France</string>
+    <string name="spain">Spain</string>
+    <string name="peru">Peru</string>
+    <string name="switzerland">Switzerland</string>
+    <string name="england">England</string>
+    <string name="colombia">Colombia</string>
+    <string name="mexico">Mexico</string>
+    <string name="uruguay">Uruguay</string>
+    <string name="croatia">Croatia</string>
+    <string name="denmark">Denmark</string>
+    <string name="iceland">Iceland</string>
+    <string name="costa_rica">Costa Rica</string>
+    <string name="sweden">Sweden</string>
+    <string name="tunisia">Tunisia</string>
+    <string name="egypt">Egypt</string>
+    <string name="senegal">Senegal</string>
+    <string name="iran">Iran</string>
+    <string name="serbia">Serbia</string>
+    <string name="nigeria">Nigeria</string>
+    <string name="australia">Australia</string>
+    <string name="japan">Japan</string>
+    <string name="morocco">Morocco</string>
+    <string name="panama">Panama</string>
+    <string name="south_korea">South Korea</string>
+    <string name="saudi_arabia">Saudi Arabia</string>
 </resources>
